# kickstarter-mlops

./: .gitignore  LICENSE  README.md  cli.py  compose.yaml  config.py  prefect.yaml  pyproject.toml  sample.env
.prefect/: flows.json
data/interim/: kickstarter_test_07-2023.parquet  kickstarter_train_07-2023.parquet  kickstarter_val_07-2023.parquet
data/processed/: kickstarter_test_07-2023.parquet  kickstarter_train_07-2023.parquet  kickstarter_val_07-2023.parquet
localstack/s3/: compose.yaml
models/interim/: model.pkl
models/processed/: model.pkl
models/trained/: model_1l1lyz8b.pkl  model_23pcgm3p.pkl  model_by3l7r0z.pkl  model_rqit8xlg.pkl  model_snfyvx3c.pkl
notebooks/: Kickstarter_Prototyping_and_EDA.ipynb
src/data/: cleaner.py  downloader.py
src/deployment/web_service/: Dockerfile  predict.py  pyproject.toml  sample_kickstarter_project.json  test.py
src/features/: build_features.py
src/models/: register_model.py  sweep_config.yaml  train.py
src/orchestration/: orchestrate_train.py
src/utils/: aws_s3.py  io.py  pipelines.py  wandb.py
