[tool.poetry]
name = "web-service"
version = "0.1.0"
description = ""
authors = ["Javi <118106278+BoKatanKrize@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
wandb = "^0.15.8"
boto3 = "^1.28.30"
gunicorn = "^21.2.0"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
xgboost = "^1.7.6"
lightgbm = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
